# mimic-ai

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  prompt-guard.yml  release.yml
defaults/constraints/: accessibility-first.md  backwards-compatible.md  compliance.md  cost-conscious.md  deterministic.md  memory-constrained.md  minimal-downtime.md  no-frameworks.md  offline-first.md  open-source-only.md  performance-critical.md  privacy-first.md  security-first.md  test-driven.md  type-safe.md
defaults/contexts/: architecture-review.md  code-review.md  debugging.md  documentation.md  estimation.md  greenfield-project.md  incident-response.md  legacy-codebase.md  mentoring.md  migration.md  onboarding.md  open-source.md  pair-programming.md  performance-tuning.md  post-mortem.md  prototyping.md  refactoring.md  security-audit.md
defaults/personas/: backend-engineer.md  data-engineer.md  data-scientist.md  designer.md  devops-engineer.md  engineering-manager.md  frontend-engineer.md  fullstack-engineer.md  ml-engineer.md  mobile-engineer.md  platform-engineer.md  principal-backend-engineer.md  principal-data-engineer.md  principal-designer.md  principal-devops-engineer.md  principal-engineering-manager.md  principal-frontend-engineer.md  principal-ml-engineer.md  (+25 more)
docs/: book.toml
scripts/: prompt_guard_scanner.py  requirements-ci.txt
src/: cli.rs  compose.rs  fragment.rs  lib.rs  lint.rs  main.rs  registry.rs  resolve.rs  server.rs  version.rs
tests/: cli.rs  mcp_server.rs
(+152 files in other folders)
