[package]
name = "mimic-ai"
version = "0.1.0"
edition = "2021"
description = "Composable persona prompts for any LLM — an MCP server"
license = "MIT"
repository = "https://github.com/ohmyjersh/mimic"

[lib]
name = "mimic_ai"
path = "src/lib.rs"

[[bin]]
name = "mimic"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
include_dir = "0.7"
dirs = "5"
notify = "7"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
rmcp = { version = "0.15", features = ["client", "transport-io"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
